--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,28 @@
-h1{
+h1{ 
   Color:black;
   font-size:50px;
-  padding:0px 200px;}
+  padding:0px 200px;
+  text-align:center;
+}
 p{
   color:black;
-  font-size:20px;}
+  font-size:20px;
+  text-align:center;
+}
 body{
   background:lightblue;
+  text-align:center;
 }
 h2{
-  font-size:30px;}
+  font-size:30px;
+  text-align:center;
+}
 h3{
-  font-size:30px;}
+  font-size:30px;
+text-align:center;
+}
 h4{
  border-top:solid 1px;
  border-bottom:solid 1px;
+ text-align:center;
 }
