--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,9 @@
 h1{ 
-  Color:black;
-  font-size:50px;
-  padding:0px 200px;
   text-align:center;
 }
 p{
   color:black;
-  font-size:20px;
+  font-size:30px;
   text-align:center;
 }
 body{
@@ -26,3 +23,20 @@ h4{
  border-bottom:solid 1px;
  text-align:center;
 }
+#spin {
+  color:blue;
+  font-size:70px
+}
+#spin:after {
+  content:"";
+  animation: spin 5s linear infinite;
+}
+@keyframes spin {
+  0% { content:"Smart"; }
+  20% { content:"Beautiful"; }
+  40% { content:"Driven"; }
+  60% { content:"Fierce"; }
+  80% { content:"Joyful"; } 
+  100%{content:"Loving";}
+}
+
