--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,11 @@ border-bottom:solid 1px;
 text-align:center;
 }
 #spin:after {
-  content:"";
+    content:"";
   animation: spin 5s linear infinite;
+  color:blue;
+  font-size:60px;
+  font-style:italic;
 }
 @keyframes spin {
   0% { content:"Smart"; }
